(Not Just) Updated index

--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
     <div id="main-content">
       <div id="top-content">
         <div id="content-main">
-          <h1>Main Content</h1>
+          <h1>Mozilla Nepal</h1>
         </div>
       </div>
       <div id="bottom-content">
         <div id="content-left">
-         <h2>Recent news>></h2>
-         No New Developments
+         <h2>Recent news</h2>
+         Wait.. till we finish our construction! 
        </div>
        <div id="content-right">
-         <h2>Events>></h2>
-         No New Events
+         <h2>Events</h2>
+         Ah! We're planning on that. Once the workers complete......
        </div>
      </div>
    </div>
