Added nivo slider

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
       <div id="top-content">
         <div id="content-main">
           <h1>Mozilla Nepal</h1>
+            <div class="slider-wrapper theme-default">
+            <div id="slider" class="nivoSlider">
+                <img src="images/slider/developer.jpg" data-thumb="images/slider/developer.jpg" alt="" />
+                <img src="images/slider/ff4android.png" data-thumb="images/slider/ff4android.png" alt="" />
+                <img src="images/slider/people.jpg" data-thumb="images/slider/people.jpg" alt="" data-transition="slideInLeft" />
+                <img src="images/slider/firefoxos.jpg" data-thumb="images/slider/firefoxos.jpg" alt="" />
+            </div>
+        </div> <!-- End slider-wrapper -->
         </div>
       </div>
       <div id="bottom-content">
