(Not just) Updated index

--- a/index.html
+++ b/index.html
@@ -152,13 +152,17 @@
             <h2>
               Recent news
             </h2>
-            Wait.. till we finish our construction! 
+            We have little birds all around. Waiting for the raven-with-note. :)
           </div>
           <div id="content-right">
             <h2>
               Events
             </h2>
-            Ah! We're planning on that. Once the workers complete......
+            <ul>
+            	<li>Moz Meetup III
+            		<ul><li>Happening on Nov.9</li></ul>	
+            	</li>
+            </ul>
           </div>
         </div>
       </div>
