--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </h1>
         <img src="images/m_nepal_logo.png">
       </div>
+      	<center>
           <!-- Start Slider Wrappr -->
             <div class="slider-wrapper theme-default">
               <div id="slider" class="nivoSlider">
@@ -131,6 +132,7 @@
                 <img src="images/slider/firefoxos.jpg" data-thumb="images/slider/firefoxos.jpg" alt="" />
               </div>
             </div> 
+         </center>
           <!-- End slider-wrapper -->
       <div id="box-contacts">
         <a href="https://www.facebook.com/groups/MozillaNP/">
