--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
           </ul>
         </nav>	
       </header>
-      <div  id="logo-small">
-        <h1>
+      <div  id="logo-small" align="left">
+        <!-- <h1>
           We are
-        </h1>
+        </h1> -->
         <img src="images/m_nepal_logo.png">
       </div>
       	<center>
