Some Re-design stuffs

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
             <li><a style="cursor:pointer;"; class="ajax" href="pages/intro.html">Introduction</a></li>            
             <li><a href="http://blog.mozilla-nepal.org">Blog</a></li>
             <li><a href="http://wiki.mozilla-nepal.org" target="_blank">Wiki</a></li>    
-            <li class="last"><a style="cursor:pointer;" class="ajax" href="pages/involve.html">Get Involved</a></li>
+            <li><a style="cursor:pointer;" class="ajax" href="pages/involve.html">Get Involved</a></li>
+            <li class="last"><a style="cursor:pointer;" class="ajax" href="pages/chat.html">Hangout on IRC</a></li>
+
           </ul>
         </nav>	
       </header>
@@ -205,6 +207,7 @@
     </ul>          
   </div>
 </footer>
+
 </div>
 <script src="js/tabzilla.js"></script>
 </body>
