--- a/pages/involve.html
+++ b/pages/involve.html
@@ -7,12 +7,18 @@
       <style>
       #centered-popup-box{
             position: absolute;
-            left: 20%;
-            right: 20%;
-            width:60%;
-            top:30%;
-            height: 50%;
-            background-color: blue;
+            left: 10%;
+            right: 10%;
+            width:70%;
+            top:20%;
+            height: auto;
+            background-color: #eee;
+            font-family: "Open Sans", sans-serif;
+            padding: 5%;
+            display: none;
+      }
+      #topic ul li span{
+            display: none !important; 
       }
       </style>
 </head>
@@ -112,17 +118,45 @@
                         a
                   </div>
                   <script type="text/javascript">
+
+                  // $('html').click(function(e){
+                  //       if(!$('#centered-popup-box').is(':visible')) {  
+                  //             //alert('car 2 is hidden');       
+                  //       } else {
+                  //             $('#centered-popup-box').hide(400, function(){
+                  //                   $('html').fadeTo(200,1);
+                  //             })
+                  //       }     
+                              
+
+                  // });
+ 
+
                    $('#topic ul li').click(function(e){
                         //alert(e.target.nodeName);
                         //if(e.target.nodeName == 'SPAN') {
                               //$("#topic ul li span").addClass( "not-highlighted" );
-                              $("#topic ul li span").removeClass( "not-highlighted" );
+                              //$("#topic ul li span").removeClass( "not-highlighted" );
                               //$(e.target).addClass( "highlighted" );
-                              var a = $(this).html();
+                              var a = $(this);
+                              var span = a.find('span');
                               //alert(a);
-                              document.querySelector('#centered-popup-box').innerHTML = a;
+                              var elem = document.querySelector('#centered-popup-box')
+                              elem.innerHTML = span.html();
+                              $('#topic').fadeTo(200, 0.3);
+                              $('#centered-popup-box').show(400, function(){
+                                    $('#centered-popup-box').fadeTo(10,1);
+                              });
 
-
+                  $('html').keyup(function(e){
+                        //alert('Pressed: '+e.keyCode);
+                        if(e.keyCode == 27){
+                              //alert('Pressed');
+                               $('#centered-popup-box').hide(400, function(){
+                                     $('#topic').fadeTo(200,1);
+                               });
+                        }
+                  });
                         //} else {
                           //    $("#topic ul li span").removeClass( "highlighted" );
                         //}
