--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
 
   <!--stylesheet for tabzilla -->
-  <link href="css/tabzilla.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" >
   <link rel="stylesheet" media="screen,projection,tv" href="css/responsive-min.css">
   <!--stylesheet for pages-->
   <link rel="stylesheet" href="css/style.css" />
@@ -210,7 +210,7 @@
 </footer>
 
 </div>
-<script src="js/tabzilla.js"></script>
+<script src="http://www.mozilla.org/tabzilla/media/js/tabzilla.js"></script>
 </body>
 </html>
 <!-- 
